# raviosa-backend

./: .env.example  .eslintrc-config.js  .gitignore  .prettierrc.json  Cargo.toml  Dockerfile  docker-compose.yml  injection.rs  karnel_guard.rs  main.rs  nginx.conf  package-lock.json  package.json  tsconfig.json  vercel.json
.github/workflows/: docker-publish.yml
.husky/: pre-commit
injected_proxies/: proxies.rs  throttle_bus.rs
src/: app.ts  server.ts
src/app/config/: cloudinary.ts  db.ts  env.ts
src/app/errors/: app.error.ts  global.error.ts  not-found.error.ts
src/app/middlewares/: auth.middleware.ts  validation.middleware.ts
src/app/modules/category/: category.controller.ts  category.interface.ts  category.model.ts  category.route.ts  category.service.ts  category.validation.ts
src/app/modules/order/: order.controller.ts  order.interface.ts  order.model.ts  order.route.ts  order.service.ts  order.template.ts  order.validation.ts  ordered-item.model.ts
src/app/modules/product/: product.controller.ts  product.interface.ts  product.model.ts  product.route.ts  product.service.ts  product.validation.ts
src/app/modules/user/: user.constant.ts  user.controller.ts  user.interface.ts  user.model.ts  user.route.ts  user.service.ts  user.validation.ts
src/app/routes/: index.ts
src/app/utils/: cloudinary.util.ts  jwt.util.ts  multer.util.ts  nodemailer.util.ts
