[package]
name = "raviosa-api"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
openssl = "0.10"
sysinfo = "0.21"
inotify = "0.10"
tokio-util = "0.6"

[dependencies.log]
version = "0.4"
default-features = false

[profile.release]
opt-level = 3
lto = true

[profile.dev]
debug = true